<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.DetalisFragment">


    <TextView
        android:id="@+id/tvFrNewsHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/news_header"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFrNewsCategory" />

    <android.inputmethodservice.ExtractEditText
        android:id="@+id/tvFrNewsDescription"
        android:layout_width="358dp"
        android:layout_height="266dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:enabled="false"
        android:gravity="start"
        android:maxLines="15"
        android:textColor="#000"
        android:nestedScrollingEnabled="true"
        android:padding="5sp"
        android:text="@string/news_description"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/tvFrNewsHeader"
        app:layout_constraintStart_toStartOf="@+id/tvFrNewsHeader"
        app:layout_constraintTop_toBottomOf="@+id/tvFrNewsHeader" />

    <TextView
        android:id="@+id/tvFrNewsUrl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/news_url"
        app:layout_constraintEnd_toEndOf="@+id/tvFrNewsDescription"
        app:layout_constraintStart_toStartOf="@+id/tvFrNewsDescription"
        app:layout_constraintTop_toBottomOf="@+id/tvFrNewsDescription" />

    <TextView
        android:id="@+id/tvFrNewsCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:padding="3sp"
        android:text="@string/category_name"
        android:textAllCaps="true"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="@+id/tvFrNewsHeader"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFrCountryName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:padding="3sp"
        android:text="@string/country_name"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvFrLanguageNews"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:padding="3sp"
        android:text="@string/news_language"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toTopOf="@+id/tvFrCountryName"
        app:layout_constraintEnd_toEndOf="@+id/tvFrCountryName"
        app:layout_constraintStart_toStartOf="@+id/tvFrCountryName" />
</androidx.constraintlayout.widget.ConstraintLayout>